[package]
name = "rust-leetcode"
version = "0.1.0"
authors = ["Ben De Jonge"]
edition = "2024"
description = "My solutions to LeetCode problems in Rust."
license-file = "LICENSE"
repository = "https://github.com/BenDeJonge/rust-leetcode"
keywords = ["leetcode", "data structures", "algorithms"]
categories = ["algorithms", "command line utilities", "data structures"]


[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
voca_rs = "1.15.2"

[[bin]]
name = "fetch"
path = "src/fetcher/mod.rs"

[features]
# Avoid expensive unit tests of the fetcher when testing Leetcode solutions.
fetcher = []
util = []

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"
cargo = "warn"
